Add api version (v1) and update composer packages
